k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netapp
  template:
    metadata:
      labels:
        app: netapp
    spec:
      containers:
        - image: docker.io/somesh7292/netapp:87
          name: netapp
          ports:
            - containerPort: 8083
