k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netapp
spec:
  ports:
  - port: 6000
    targetPort: 8083
  selector:
    app: netapp
